test/html_fail.top.ml
#use "topfind" ;;
#require "uutf" ;;
#require "re" ;;
#directory "lib" ;;
#directory "implem" ;;
#load "tyxml_f.cma" ;;
#load "tyxml.cma" ;;

open Html5 ;;

div [a [a []]] ;;
